# src/main/java/it/gov/pagopa/pu/citizen/controller/DebtPositionController.java
@@ -1,6 +1,7 @@
 package it.gov.pagopa.pu.citizen.controller;
 
 import it.gov.pagopa.pu.citizen.controller.generated.DebtPositionApi;
+import it.gov.pagopa.pu.citizen.dto.FileResourceDTO;
 import it.gov.pagopa.pu.citizen.dto.generated.DebtPositionRequestDTO;
 import it.gov.pagopa.pu.citizen.dto.generated.DebtPositionResponseDTO;
 import it.gov.pagopa.pu.citizen.security.SecurityUtils;
@@ -8,11 +9,7 @@ import it.gov.pagopa.pu.citizen.service.debtposition.DebtPositionFacadeService;
 import it.gov.pagopa.pu.debtpositions.dto.generated.DebtPositionDTO;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.Resource;
-import org.springframework.http.ContentDisposition;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.web.bind.annotation.RestController;
 
 @Slf4j
@@ -55,5 +52,26 @@ public class DebtPositionController implements DebtPositionApi {
   public ResponseEntity<DebtPositionDTO> getDebtPositionDetail(Long brokerId, Long debtPositionId, String xFiscalCode) {
     log.info("User requested getDebtPositionDetail having brokerId {} and debtPositionId {} ", brokerId, debtPositionId);
     return ResponseEntity.ofNullable(debtPositionFacadeService.getDebtPositionDetail(brokerId, xFiscalCode, debtPositionId, SecurityUtils.getAccessToken()));
+  }
+
+  @Override
+  public ResponseEntity<Resource> getUnpaidPaymentNotice(String fiscalCode, Long brokerId, Long organizationId, Long installmentId, String iuv, String iud) {
+    log.info("User requested getUnpaidPaymentNotice having brokerId {} and organizationId {}", brokerId, organizationId);
+
+    FileResourceDTO fileResourceDTO = debtPositionFacadeService.getUnpaidPaymentNotice(
+      fiscalCode, brokerId, organizationId, installmentId, iuv, iud, SecurityUtils.getAccessToken());
+    if(fileResourceDTO!=null) {
+      HttpHeaders headers = new HttpHeaders();
+      headers.setContentDisposition(ContentDisposition.attachment()
+        .filename(fileResourceDTO.getFileName())
+        .build());
+
+      return ResponseEntity.ok()
+        .contentType(MediaType.APPLICATION_PDF)
+        .headers(headers)
+        .body(fileResourceDTO.getResource());
+    } else {
+      return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
   }
 }
